--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -39,7 +39,8 @@
     "%autoreload 2\n",
     "\n",
     "import pandas as pd\n",
-    "pd.set_option('display.max_columns', 500)\n",
+    "\n",
+    "pd.set_option(\"display.max_columns\", 500)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
@@ -441,10 +442,10 @@
    "source": [
     "# Distribution of the target variable ('Rings' as an indicator of age)\n",
     "plt.figure(figsize=(8, 6))\n",
-    "sns.histplot(df['Rings'], kde=True, bins=30)\n",
-    "plt.title('Distribution of Abalone Age (Rings)')\n",
-    "plt.xlabel('Rings (Age)')\n",
-    "plt.ylabel('Frequency')\n",
+    "sns.histplot(df[\"Rings\"], kde=True, bins=30)\n",
+    "plt.title(\"Distribution of Abalone Age (Rings)\")\n",
+    "plt.xlabel(\"Rings (Age)\")\n",
+    "plt.ylabel(\"Frequency\")\n",
     "plt.show()"
    ]
   },
@@ -467,8 +468,8 @@
    "source": [
     "# Boxplot to observe outliers in numerical features\n",
     "plt.figure(figsize=(12, 6))\n",
-    "sns.boxplot(data=df.drop('Rings', axis=1))\n",
-    "plt.title('Boxplot of Abalone Features')\n",
+    "sns.boxplot(data=df.drop(\"Rings\", axis=1))\n",
+    "plt.title(\"Boxplot of Abalone Features\")\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
    ]
@@ -513,12 +514,12 @@
    ],
    "source": [
     "# Exclude the 'Sex' column or any other categorical column for correlation calculation\n",
-    "df_numeric = df.select_dtypes(include=['float64', 'int64'])\n",
+    "df_numeric = df.select_dtypes(include=[\"float64\", \"int64\"])\n",
     "\n",
     "# Correlation heatmap to identify relationships between numerical features\n",
     "plt.figure(figsize=(10, 8))\n",
-    "sns.heatmap(df_numeric.corr(), annot=True, cmap='coolwarm', linewidths=0.5)\n",
-    "plt.title('Correlation Heatmap of Abalone Features')\n",
+    "sns.heatmap(df_numeric.corr(), annot=True, cmap=\"coolwarm\", linewidths=0.5)\n",
+    "plt.title(\"Correlation Heatmap of Abalone Features\")\n",
     "plt.show()"
    ]
   },
@@ -541,10 +542,10 @@
    "source": [
     "# Explore relationships between some key features (example: Length vs Diameter)\n",
     "plt.figure(figsize=(8, 6))\n",
-    "sns.scatterplot(data=df, x='Length', y='Diameter', hue='Rings', palette='viridis')\n",
-    "plt.title('Length vs Diameter of Abalone by Age (Rings)')\n",
-    "plt.xlabel('Length')\n",
-    "plt.ylabel('Diameter')\n",
+    "sns.scatterplot(data=df, x=\"Length\", y=\"Diameter\", hue=\"Rings\", palette=\"viridis\")\n",
+    "plt.title(\"Length vs Diameter of Abalone by Age (Rings)\")\n",
+    "plt.xlabel(\"Length\")\n",
+    "plt.ylabel(\"Diameter\")\n",
     "plt.show()"
    ]
   },
@@ -566,24 +567,38 @@
    ],
    "source": [
     "# Identify continuous and categorical features\n",
-    "continuous_features = ['Length', 'Diameter', 'Height', 'Whole weight', 'Shucked weight', 'Viscera weight', 'Shell weight']\n",
-    "categorical_feature = 'Sex'\n",
+    "continuous_features = [\n",
+    "    \"Length\",\n",
+    "    \"Diameter\",\n",
+    "    \"Height\",\n",
+    "    \"Whole weight\",\n",
+    "    \"Shucked weight\",\n",
+    "    \"Viscera weight\",\n",
+    "    \"Shell weight\",\n",
+    "]\n",
+    "categorical_feature = \"Sex\"\n",
     "\n",
     "# Plot continuous features against 'Rings'\n",
     "plt.figure(figsize=(15, 12))\n",
     "for i, feature in enumerate(continuous_features):\n",
     "    plt.subplot(4, 2, i + 1)\n",
-    "    sns.regplot(x=feature, y='Rings', data=df, scatter_kws={'alpha':0.5}, line_kws={'color':'red'})\n",
-    "    plt.title(f'{feature} vs Rings')\n",
+    "    sns.regplot(\n",
+    "        x=feature,\n",
+    "        y=\"Rings\",\n",
+    "        data=df,\n",
+    "        scatter_kws={\"alpha\": 0.5},\n",
+    "        line_kws={\"color\": \"red\"},\n",
+    "    )\n",
+    "    plt.title(f\"{feature} vs Rings\")\n",
     "    plt.xlabel(feature)\n",
-    "    plt.ylabel('Rings')\n",
+    "    plt.ylabel(\"Rings\")\n",
     "\n",
     "# Plot categorical feature (Sex) against 'Rings' using violin plot\n",
     "plt.subplot(4, 2, len(continuous_features) + 1)\n",
-    "sns.violinplot(x=categorical_feature, y='Rings', data=df)\n",
-    "plt.title(f'{categorical_feature} vs Rings')\n",
+    "sns.violinplot(x=categorical_feature, y=\"Rings\", data=df)\n",
+    "plt.title(f\"{categorical_feature} vs Rings\")\n",
     "plt.xlabel(categorical_feature)\n",
-    "plt.ylabel('Rings')\n",
+    "plt.ylabel(\"Rings\")\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
