--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -240,8 +240,11 @@
     "def load_data(root_path: str, data_name: str):\n",
     "    return pd.read_csv(os.path.join(root_path, data_name))\n",
     "\n",
-    "data_root = \"/Users/jazminemei/Desktop/HEC/MLOps/Project/xhec-mlops-project-student/data\"\n",
-    "training_data_name = 'abalone.csv'\n",
+    "\n",
+    "data_root = (\n",
+    "    \"/Users/jazminemei/Desktop/HEC/MLOps/Project/xhec-mlops-project-student/data\"\n",
+    ")\n",
+    "training_data_name = \"abalone.csv\"\n",
     "train_df = load_data(data_root, training_data_name)\n",
     "train_df"
    ]
@@ -263,10 +266,9 @@
     "\n",
     "\n",
     "def encode_categorical_cols(\n",
-    "        df: pd.DataFrame, \n",
-    "        categorical_cols: List[str] = None\n",
-    "        ) -> pd.DataFrame:\n",
-    "    \n",
+    "    df: pd.DataFrame, categorical_cols: List[str] = None\n",
+    ") -> pd.DataFrame:\n",
+    "\n",
     "    if categorical_cols is None:\n",
     "        categorical_cols = [\"Sex\"]\n",
     "    le = LabelEncoder()\n",
@@ -274,13 +276,13 @@
     "        df[col] = le.fit_transform(df[col])\n",
     "    return df\n",
     "\n",
-    "def extract_x_y(\n",
-    "    df: pd.DataFrame,\n",
-    "    categorical_cols: List[str] = None\n",
-    ") -> pd.DataFrame:\n",
-    "    df = encode_categorical_cols(df) \n",
-    "    X, y = df.drop('Rings', axis=1), df['Rings']\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1024)\n",
+    "\n",
+    "def extract_x_y(df: pd.DataFrame, categorical_cols: List[str] = None) -> pd.DataFrame:\n",
+    "    df = encode_categorical_cols(df)\n",
+    "    X, y = df.drop(\"Rings\", axis=1), df[\"Rings\"]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=0.2, random_state=1024\n",
+    "    )\n",
     "\n",
     "    return X_train, X_test, y_train, y_test"
    ]
@@ -307,15 +309,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(\n",
-    "    X_train: np.ndarray, \n",
-    "    y_train: np.ndarray\n",
-    "    ):\n",
+    "def train_model(X_train: np.ndarray, y_train: np.ndarray):\n",
     "\n",
-    "    pipeline = Pipeline([\n",
-    "        ('scaler', StandardScaler()),\n",
-    "        ('regressor', LinearRegression())\n",
-    "    ])\n",
+    "    pipeline = Pipeline(\n",
+    "        [(\"scaler\", StandardScaler()), (\"regressor\", LinearRegression())]\n",
+    "    )\n",
     "\n",
     "    pipeline.fit(X_train, y_train)\n",
     "    return pipeline"
@@ -343,11 +341,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict_age(\n",
-    "    input_data: np.ndarray, \n",
-    "    pipeline: Pipeline\n",
-    "    ):\n",
-    "    \n",
+    "def predict_age(input_data: np.ndarray, pipeline: Pipeline):\n",
+    "\n",
     "    return pipeline.predict(input_data)\n",
     "\n",
     "\n",
@@ -398,7 +393,7 @@
     "# Evaluation on test data\n",
     "test_prediction = predict_age(X_test, model)\n",
     "test_rmse = evaluate_model(y_test, test_prediction)\n",
-    "test_rmse "
+    "test_rmse"
    ]
   },
   {
@@ -437,7 +432,7 @@
     "        \"developer\": \"Jazminemei\",\n",
     "        \"experiment_type\": \"baseline\",\n",
     "        \"dataset\": \"abalone\",\n",
-    "        \"message\": \"happy international developer's day!\"\n",
+    "        \"message\": \"happy international developer's day!\",\n",
     "    }\n",
     "    mlflow.set_tags(tags)\n",
     "\n",
@@ -463,12 +458,12 @@
     "    # Log your model\n",
     "    mlflow.sklearn.log_model(ppl, \"linear_regression_pipeline\")\n",
     "    # mlflow.sklearn.log_model(scaler, \"preprocessor\")\n",
-    "    mlflow.log_metric('train_accuracy', train_rmse)\n",
-    "    mlflow.log_metric('test_accuracy', test_rmse)\n",
+    "    mlflow.log_metric(\"train_accuracy\", train_rmse)\n",
+    "    mlflow.log_metric(\"test_accuracy\", test_rmse)\n",
     "\n",
     "    # Register your model in mlfow model registry\n",
     "    model_uri = f\"runs:/{run.info.run_id}/model\"\n",
-    "    mlflow.register_model(model_uri, 'AbaloneLR')"
+    "    mlflow.register_model(model_uri, \"AbaloneLR\")"
    ]
   }
  ],
