--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -231,18 +231,17 @@
        "[4177 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def load_data(root_path: str, data_name: str):\n",
-    "    return pd.read_csv(os.path.join(root_path, data_name))\n",
+    "def load_data(data_path: str):\n",
+    "    return pd.read_csv(data_path)\n",
     "\n",
-    "data_root = \"/Users/jazminemei/Desktop/HEC/MLOps/Project/xhec-mlops-project-student/data\"\n",
-    "training_data_name = 'abalone.csv'\n",
-    "train_df = load_data(data_root, training_data_name)\n",
+    "data_path = \"../data/abalone.csv\"\n",
+    "train_df = load_data(data_path)\n",
     "train_df"
    ]
   },
