--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -7,9 +7,7 @@
    "source": [
     "# EDA (Exploratory Data Analysis) of the dataset\n",
     "\n",
-    "In this notebook, explore the Abalone dataset, by showing relevant visualizations that help understand the problem you are modelling.\n",
-    "\n",
-    "Please make sure to write down your conclusions in the final notebook and to remove these intructions."
+    "In this notebook, explore the Abalone dataset, by showing relevant visualizations that help understand the problem you are modelling."
    ]
   },
   {
@@ -603,6 +601,22 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion:\n",
+    "\n",
+    "1. Size and Weight Correlations: There is a clear relationship between the size-related and weight-related features of the abalone. Longer, wider abalones also weigh more, particularly when it comes to Whole weight and Shucked weight.\n",
+    "2. Moderate Age Trends: Abalones do tend to grow larger as they age, but this trend is not perfectly linear or uniform across all features. Age (Rings) is moderately correlated with physical characteristics, but other factors may be influencing size and weight beyond age alone.\n",
+    "3. Skewed Age Distribution: The dataset contains a larger number of younger abalones (around 9-10 rings), with fewer older specimens. This skew in age distribution may reflect either natural population dynamics or a sampling bias."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
