--- a/notebooks/modelling.ipynb
+++ b/notebooks/modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -231,26 +231,19 @@
        "[4177 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def load_data(data_path: str):\n",
-    "    return pd.read_csv(data_path)\n",
+    "def load_data(root_path: str, data_name: str):\n",
+    "    return pd.read_csv(os.path.join(root_path, data_name))\n",
     "\n",
-<<<<<<< HEAD
-    "data_path = \"../data/abalone.csv\"\n",
-    "train_df = load_data(data_path)\n",
-=======
     "\n",
-    "data_root = (\n",
-    "    \"/Users/jazminemei/Desktop/HEC/MLOps/Project/xhec-mlops-project-student/data\"\n",
-    ")\n",
+    "data_root = \"../data\"\n",
     "training_data_name = \"abalone.csv\"\n",
     "train_df = load_data(data_root, training_data_name)\n",
->>>>>>> fae115a7d87cfdf9b0f201fdf504982c01531f2a
     "train_df"
    ]
   },
@@ -474,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlopscourse",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -488,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
